# Keste

./: CODE_OF_CONDUCT.md  CRITICAL_FIXES_SUMMARY.md  DEV_MODE.md  DOCUMENTATION_UPDATE.md  LICENSE  PHASE6.md  PHASE6_COMPLETE.md  PHASE6_SUMMARY.txt  PRD.md  README.md  SECURITY.md  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  BUILD.md  CELL_SELECTION.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_FIXES_PLAN.md  DEBUG-IMPORT.md  DOCUMENTATION_REORGANIZATION.md  FORMULA_DEBUG_SUMMARY.md  FORMULA_ENGINE_INVESTIGATION.md  FORMULA_TESTING_INSTRUCTIONS.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  TECHNICAL_DEBT.md
docs/phases/: PHASE6_INTEGRATION.md
docs/product/: PRD-EXCEL-IMPORT-100.md  PRD.md  PROGRESS.md
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmds.rs  main.rs  sqlite_reader.rs  sqlite_writer.rs
src/components/: BorderPicker.tsx  ChangeTracker.tsx  ChartBuilder.tsx  ChartRenderer.tsx  CommentIndicator.tsx  CommentPanel.tsx  CommentThread.tsx  Dropzone.tsx  EditableCell.optimized.tsx  EditableCell.tsx  EditableGridView.tsx  ErrorBoundary.tsx  ExportBar.tsx  FormulaBar.tsx  FormulaLibrary.tsx  GridView.tsx  NameManager.tsx  NumberFormatPicker.tsx  PerformanceMonitor.tsx  WorkbookViewer.tsx
src/core-ts/: chart-types.ts  comment-types.ts  editor-types.ts  formula-parser.ts  formula-types.ts  merge-utils.ts  number-formatter.ts  (+7 more)
(+8 files in other folders)
